[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "robyn"
version = "0.69.0"
description = "A Super Fast Async Python Web Framework with a Rust runtime."
authors = [{ name = "Sanskar Jethi", email = "sansyrox@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Topic :: Internet :: WWW/HTTP",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "inquirerpy == 0.3.4",
  "multiprocess == 0.70.18",
  "orjson == 3.10.18",
  "rustimport == 1.7.1",
  # conditional
  "uvloop~=0.21.0; sys_platform != 'win32' and platform_python_implementation == 'CPython' and platform_machine != 'armv7l'",
  "watchdog == 6.0.0",
]

[project.optional-dependencies]
"templating" = ["jinja2 == 3.1.6"]

[project.urls]
Documentation = "https://robyn.tech/"
Repository = "https://github.com/sparckles/robyn"
Issues = "https://github.com/sparckles/robyn/issues"
Changelog = "https://github.com/sparckles/robyn/blob/main/CHANGELOG.md"

[project.scripts]
robyn = "robyn.cli:run"
test_server = "integration_tests.base_routes:main"

[dependency-groups]
dev = [
  "black==25.1.0",
  "commitizen==4.8.3",
  "isort==6.0.1",
  "maturin==0.14.12",
  "pre-commit==4.2.0",
  "ruff==0.11.13",
]
test = [
  "nox==2025.5.1",
  "pytest==8.4.0",
  "pytest-codspeed==3.0.0",
  "requests==2.32.4",
  "websocket-client==1.8.0",
]


[tool.poetry]
name = "robyn"
version = "0.69.0"
description = "A Super Fast Async Python Web Framework with a Rust runtime."
authors = ["Sanskar Jethi <sansyrox@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.9"
inquirerpy = "0.3.4"
multiprocess = "0.70.18"
orjson = "^3.10.18"
rustimport = "^1.7.1"
uvloop = { version = "0.21.0", markers = "sys_platform != 'win32' and (sys_platform != 'cygwin' and platform_python_implementation != 'PyPy')" }
watchdog = "6.0.0"
jinja2 = { version = "3.1.6", optional = true }

[tool.poetry.extras]
templating = ["jinja2"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "25.1.0"
commitizen = "4.8.3"
isort = "6.0.1"
maturin = "0.14.12"
pre-commit = "4.2.0"
ruff = "0.11.13"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
nox = "2025.5.1"
pytest = "8.4.0"
pytest-codspeed = "3.0.0"
requests = "2.32.4"
websocket-client = "1.8.0"

[tool.poetry.scripts]
test_server = { callable = "integration_tests.base_routes:main" }

[tool.ruff]
line-length = 160
exclude = ["src/*", ".git", "docs"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.isort]
profile = "black"
line_length = 160

[tool.black]
line-length = 160
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.maturin]
module-name = "robyn"
